NetBSD Problem Report #42148

From www@NetBSD.org  Sat Oct  3 09:42:17 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 4FF3663C37A
	for <gnats-bugs@gnats.netbsd.org>; Sat,  3 Oct 2009 09:42:17 +0000 (UTC)
Message-Id: <20091003094216.D969763B8B6@www.NetBSD.org>
Date: Sat,  3 Oct 2009 09:42:16 +0000 (UTC)
From: Christoph_Egger@gmx.de
Reply-To: Christoph_Egger@gmx.de
To: gnats-bugs@NetBSD.org
Subject: savecore/swapctl defaults to /dev/sd0b and not to the swap entry in /etc/fstab
X-Send-Pr-Version: www-1.0

>Number:         42148
>Category:       install
>Synopsis:       savecore/swapctl defaults to /dev/sd0b and not to the swap entry in /etc/fstab
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    cegger
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Oct 03 09:45:00 +0000 2009
>Closed-Date:    Sat Jan 09 01:33:11 +0000 2010
>Last-Modified:  Sat Jan 09 01:35:01 +0000 2010
>Originator:     Christoph Egger
>Release:        -current (5.99.20)
>Organization:
>Environment:
NetBSD/i386
>Description:

On my i386 machine I have a dual boot install with NetBSD and Linux.
NetBSD is on /dev/sd0a
Linux is on /dev/sd0e
The swap partition is "shared" on /dev/sd0f.
There's no /dev/sd0b

NetBSD/i386 is fresh installed.

At boot time, swapctl -A -t noblk  enables the swap,
vmstat and top report the available swap space correctly.

savecore says '/dev/sd0b: Device not configured'

swapctl -z says 'dump device is sd0b'

Workaround/Fix:

Change the entry in /etc/fstab:

-/dev/sd0f              none    swap    sw               0 0
+/dev/sd0f              none    swap    sw,dp            0 0

and swapctl -z says 'dump device is sd0f'
and savecore works as expected.

>How-To-Repeat:


>Fix:

sysinst should add the 'dp' switch in /etc/fstab when dump device
is redefined.

>Release-Note:

>Audit-Trail:
From: Martin Husemann <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42148 CVS commit: src/distrib/utils/sysinst
Date: Sat, 3 Oct 2009 12:00:00 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat Oct  3 12:00:00 UTC 2009

 Modified Files:
 	src/distrib/utils/sysinst: disks.c

 Log Message:
 When creating /etc/fstab:
 for the first swap partition use type sw,dp instead of sw, so dump device
 gets configured correctly if swap is not on the second partition.
 Fixes PR install/42148.


 To generate a diff of this commit:
 cvs rdiff -u -r1.107 -r1.108 src/distrib/utils/sysinst/disks.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: install-manager->cegger
Responsible-Changed-By: martin@NetBSD.org
Responsible-Changed-When: Sat, 03 Oct 2009 12:11:33 +0000
Responsible-Changed-Why:
Over to cegger for pullup handling


State-Changed-From-To: open->feedback
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sat, 03 Oct 2009 12:11:33 +0000
State-Changed-Why:
Fixed, thanks for the report!
Can you please test and request pullup to netbsd-5?


From: Christoph Egger <Christoph_Egger@gmx.de>
To: gnats-bugs@NetBSD.org
Cc: install-manager@netbsd.org, netbsd-bugs@netbsd.org, 
 gnats-admin@netbsd.org, martin@NetBSD.org
Subject: Re: install/42148 (savecore/swapctl defaults to /dev/sd0b and not
 to the swap entry in /etc/fstab)
Date: Sat, 14 Nov 2009 12:44:42 +0100

 I tested this successfully with a fresh install of NetBSD-current.

 Christoph

State-Changed-From-To: feedback->pending-pullups
State-Changed-By: cegger@NetBSD.org
State-Changed-When: Tue, 29 Dec 2009 18:08:44 +0000
State-Changed-Why:
pullup request filed. Ticket #1217


State-Changed-From-To: pending-pullups->closed
State-Changed-By: snj@NetBSD.org
State-Changed-When: Sat, 09 Jan 2010 01:33:11 +0000
State-Changed-Why:
Pulled up.


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42148 CVS commit: [netbsd-5] src/distrib/utils/sysinst
Date: Sat, 9 Jan 2010 01:31:57 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sat Jan  9 01:31:57 UTC 2010

 Modified Files:
 	src/distrib/utils/sysinst [netbsd-5]: disks.c

 Log Message:
 Pull up following revision(s) (requested by cegger in ticket #1217):
 	distrib/utils/sysinst/disks.c: revision 1.108
 When creating /etc/fstab:
 for the first swap partition use type sw,dp instead of sw, so dump device
 gets configured correctly if swap is not on the second partition.
 Fixes PR install/42148.


 To generate a diff of this commit:
 cvs rdiff -u -r1.100.2.5 -r1.100.2.6 src/distrib/utils/sysinst/disks.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.