When creating /etc/fstab: for the first swap partition use type sw,dp instead of sw, so dump device gets configured correctly if swap is not on the second partition. Fixes PR install/42148.